[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "histastro"
version = "0.0.5"
authors = [ { name="Marc van der Sluys", email="git@vandersluys.nl" } ]
description = "A Python package for historical-astronomy calculations of Sun, Moon and planets"
readme   = "README.md"
license  = {text = "GPLv3+"}
keywords = ["astronomy","history","ephemeris","sun","moon","planets"]
dependencies = ["fortranformat","numpy"]

# See: https://pypi.org/pypi?:action=list_classifiers
classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "Intended Audience :: Education",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Topic :: Scientific/Engineering :: Astronomy",
        "Topic :: Sociology :: History"
    ]

[project.urls]
GitHub = "https://github.com/MarcvdSluys/HistAstro"
ReadTheDocs = "https://histastro.readthedocs.io"
Homepage = "https://astro.ru.nl/~sluys/HistAstro"
